--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
     <title>Document</title>
 </head>
 <body>
-    
+     <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light top">
+            <div class="container">
+                <a class="navbar-brand" href="#"><img src="img/Dudeshape.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="nav-link"><img src="img/Vector.svg" alt=""></a>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Contact Us</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link"><i class="bi bi-person"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"><i class="bi bi-cart2"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link"><img src="img/Vector.svg" class="d-lg-inline d-none" alt=""></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
 </body>
 </html>
