--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
                 </div>
             </div>
         </nav>
-
+        <section class="home mt-5">
+            <div class="container">
+                <div class="row text-md-start text-center d-flex align-items-center justify-content-around mx-auto">
+                    <div class="col-md-6">
+                        <h1 class="display-6 fw-bold left">Get Your Best Cosmetic Products Here</h1>
+                        <p class="text-muted bottom">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry.
+                            Lorem Ipsum has been
+                            the industry's standard dummy</p>
+                        <label for="" class="left">
+                            <input type="search" class="left" placeholder="Search...">
+                            <a href="#"><i class="bi bi-search sag"></i></a>
+                        </label> <br>
+                        <button type="button" class="top">Shop Now</button>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="img/PSDNukJan_(12) 1.png" class="img-fluid ms-md-5 sag" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
