product section added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/main.css">
 
-    <title>DudeShape</title>
+    <title>BeautyQueen</title>
 </head>
+
 <body>
-     <header>
+    <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light top">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="img/Dudeshape.png" alt=""></a>
@@ -73,5 +74,81 @@
             </div>
         </section>
     </header>
+    <section class="spon my-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-2 col-6 top">
+                    <img src="img/Walmart Logo.png" alt="">
+                </div>
+                <div class="col-lg-2 col-6 sol ">
+                    <img src="img/Microsoft Logo.png" alt="">
+                </div>
+                <div class="col-lg-2 col-6 mt-lg-0 mt-4 sol">
+                    <img src="img/FedEx Logo.png" alt="">
+                </div>
+                <div class="col-lg-2 col-6 mt-lg-0 mt-4 sag">
+                    <img src="img/Google Logo.png" alt="">
+                </div>
+                <div class="col-lg-2 col-6 mt-lg-0 mt-4 sag">
+                    <img src="img/Hubspot Logo.png" alt="">
+                </div>
+                <div class="col-lg-2 col-6 mt-lg-0 mt-4 bottom">
+                    <img src="img/Vector (11).png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="product my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1 class="left">Our Porular Product</h1>
+                    <p class="text-muted sag">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy
+                    </p>
+                </div>
+                <div class="col-md-6 d-flex justify-content-end align-items-end pb-4">
+                    <a href="#">Discover Our Products <i class="bi bi-arrow-right-short fw-bold"></i></a>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-lg-6 left">
+                    <img src="img/pump-bottle-02 1.png" class="img-fluid" alt="">
+                    <div class="bor">
+                        <h3>Cosmetic products</h3>
+                        <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy</p>
+                        <div class="d-flex align-items-center">
+                            <button type="button" class="me-3">Buy Now</button>
+                            <button type="button" class="btnn">Add To Cart</button>
+                            <h6 class="fw-bold ms-auto">$120</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 sag">
+                    <img src="img/jar-15 1.png" class="img-fluid" alt="">
+                    <div class="bor">
+                        <h3>Cosmetic products</h3>
+                        <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            Lorem Ipsum has been the industry's standard dummy</p>
+                        <div class="d-flex align-items-center">
+                            <button type="button" class="me-3">Buy Now</button>
+                            <button type="button" class="btnn">Add To Cart</button>
+                            <h6 class="fw-bold ms-auto">$120</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    
+
+
+
 </body>
+
 </html>
