--- a/index.html
+++ b/index.html
@@ -145,7 +145,48 @@
     </section>
 
 
-    
+    <section class="people my-5 py-5">
+        <div class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                    <h1 class="fw-bold top">100%</h1>
+                    <p class="text-muted bottom">Organic Products</p>
+                </div>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                    <h1 class="fw-bold bottom">2M+</h1>
+                    <p class="text-muted top">Yearly Sales</p>
+                </div>
+                <div class="col-md-2 d-flex flex-column align-items-center">
+                    <h1 class="fw-bold top">1.9M+</h1>
+                    <p class="text-muted bottom">Happy Customar</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="ps my-5 py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 sol">
+                    <h1 class="display-3">The Perfect Beauty Of You</h1>
+                    <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book.</p>
+                    <p class="text-muted">It has survived not only five centuries, but also the leap into electronic
+                        typesetting, remaining
+                        essentially unchanged. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.</p>
+                    <button type="button" class="button mt-3">Shop Now</button>
+                </div>
+                <div class="col-md-6 sag">
+                    <img src="img/Rectangle 8 (1).png" class="img-fluid shadow-lg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
