--- a/index.html
+++ b/index.html
@@ -187,7 +187,76 @@
         </div>
     </section>
 
+    <section class="pis my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 left">
+                    <img src="img/pretty-smiling-joyfully-female-with-fair-hair-dressed-casually-looking-with-satisfaction (1) 1.png"
+                        class="img-fluid shadow-lg" alt="">
+                </div>
+                <div class="col-md-6 sag">
+                    <h1 class="mt-5">Amazing Cosmetic</h1>
+                    <div class="mt-2 mb-4">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                    </div>
+                    <p> <span><img src="img/“.png" alt=""></span> Lorem Ipsum is simply dummy text of the printing and
+                        typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book" <span><img src="img/“ (1).png"
+                                alt=""></span> </p>
 
+                    <h2 class="mt-5">Sashura Petrova</h2>
+                    <p class="text-muted">UI UX Designer</p>
+                </div>
+
+            </div>
+        </div>
+        </div>
+    </section>
+
+
+    <footer class="mt-5 pt-5 pb-5">
+        <div class="container">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-8">
+                    <h1 class="display-6 fw-bold">Subscribe to Get Our Letest News</h1>
+                </div>
+                <div class="col-md-4 d-flex justify-content-md-end justify-content-start">
+                    <label for="" class="d-flex">
+                        <input type="search" placeholder="Search...">
+                        <a href="#">Subscribe</a>
+                    </label>
+                </div>
+            </div>
+            <div class="row mt-5 form">
+                <div class="col-md-4">
+                    <img src="img/Dudeshape.png" class="img-fluid delaa" alt="">
+                    <p class="text-muted mt-5 delaa">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy</p>
+                </div>
+                <div class="col-md-4 col-6 d-flex flex-column">
+                    <h4 class="fw-bold delaa">Quick Link</h4>
+                    <a href="#" class="delaa">Home</a>
+                    <a href="#" class="delaa">Products</a>
+                    <a href="#" class="delaa">About Us</a>      
+                </div>
+                <div class="col-md-4 col-6 d-flex flex-column">
+                    <h4 class="fw-bold dela">Contact Us</h4>
+                    <a href="#" class="dela">random@email.com</a>
+                    <a href="#" class="dela">+123456789</a>
+                    <div class="d-flex">
+                        <a href="#" class="dela"><i class="bi bi-facebook"></i></a> 
+                       <a href="#" class="dela"><i class="bi bi-twitter"></i></a> 
+                       <a href="#" class="dela"><i class="bi bi-instagram"></i></a> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
