--- a/index.html
+++ b/index.html
@@ -258,7 +258,10 @@
         </div>
     </footer>
 
-
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-beta1/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="index.js"></script>
 </body>
 
 </html>
